First push, soulflame horn buff plugin

--- a/runelite-plugin.properties
+++ b/runelite-plugin.properties
@@ -1,5 +1,5 @@
-displayName=Example
-author=Nobody
-description=An example greeter plugin
-tags=
-plugins=com.example.ExamplePlugin
+displayName=Soulflame Horn Buff Tracker
+author=Specz
+description=Shows a message and overlay for the Soulflame Horn special attack.
+tags=combat, buff, horn
+plugins=soulflamehorn.SoulflameHornPlugin
